# statistics

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  index.html  search-index.js
implementors/statistics/: trait.ToReal.js
src/: lib.rs  moment.rs  real.rs
src/statistics/src/: lib.rs.html  moment.rs.html  real.rs.html
statistics/: fn.mean.html  fn.variance.html  index.html  sidebar-items.js  trait.Real.html  trait.ToReal.html
statistics/moment/: fn.mean.html  fn.variance.html
statistics/real/: trait.Real.html  trait.ToReal.html
