[package]
name = "statistics"
version = "0.3.2"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/statistics"
homepage = "https://github.com/stainless-steel/statistics"
documentation = "https://stainless-steel.github.io/statistics"
description = "The package provides a statistics toolbox."

[dev-dependencies]
assert = "0.6"
